# video-defects-generator

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
